--- a/src/main/webapp/templates/editDiscipline.xhtml
+++ b/src/main/webapp/templates/editDiscipline.xhtml
@@ -11,7 +11,7 @@
 <h:head>
     <title>Редактировать описание дисциплины</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link type="text/css" rel="stylesheet" href="css/discipline.css"/>
+    <link type="text/css" rel="stylesheet" href="../css/discipline.css"/>
 
 </h:head>
 <h:body>
@@ -55,7 +55,6 @@
             <p:growl id="messages" showDetail="true"/>
 
         </h:panelGrid>
-
         <p:growl id="growl" life="5000"/>
         <p:commandButton value="Добавить" id="add" update="growl" actionListener="#{editDisciplineBean.add}"
                          rendered="#{editDisciplineBean.newDiscipline}" styleClass="btn-primary"/>
