--- a/src/main/webapp/templates/listDisciplines.xhtml
+++ b/src/main/webapp/templates/listDisciplines.xhtml
@@ -6,10 +6,12 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:fn="http://java.sun.com/jsp/jstl/functions">
+      xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
 <h:head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link type="text/css" rel="stylesheet" href="css/discipline.css"/>
+    <link type="text/css" rel="stylesheet" href="../resources/css/discipline.css"/>
     <title>Абитуриентам - Справочник абитуриента</title>
 </h:head>
 <h:body>
@@ -24,7 +26,7 @@
 
                 <f:facet name="header">
                     <p:graphicImage value="#{disciplineImages.image}">
-                        <f:param name="id" value="#{discipline.id}" />
+                        <f:param name="id" value="#{discipline.id}"/>
                     </p:graphicImage>
                 </f:facet>
 
@@ -47,7 +49,20 @@
 
         <!-- displays a horizantal line; it can be styled with css -->
         <p:separator/>
-
+        <ui:composition
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+            <link type="text/css" rel="stylesheet" href="../css/templates-UI.css"/>
+            <h2>Include page</h2>
+            <p>Include page blah blah lorem ipsum</p>
+            <p>Posted by: seductorAmadeus</p>
+            <p>Contact information:
+                <a href="mailto:seductorAmadeus@gmail.com">seductorAmadeus@gmail.com</a>.
+            </p>
+        </ui:composition>
+        <ui:include src=""/>
     </h:form>
 </h:body>
 </html>
