--- a/src/main/webapp/resources/css/main-page.css
+++ b/src/main/webapp/resources/css/main-page.css
@@ -37,7 +37,7 @@ body, html {
 }
 
 .content-table-column {
-    border: 1px solid coral;
+    border: 2px solid #e6e6e6;
     height: 30%;
     float: left;
     width: 28%;
@@ -52,6 +52,7 @@ body, html {
 
 .first-course:hover {
     background: #c9c9c9;
+    color: black;
 }
 
 .second-course:hover {
