--- a/src/main/webapp/resources/css/main-page.css
+++ b/src/main/webapp/resources/css/main-page.css
@@ -33,7 +33,6 @@ body, html {
     overflow: hidden;
     width: 100%;
     height: 70%;
-    text-align: center;
 }
 
 .content-table-column {
@@ -42,6 +41,14 @@ body, html {
     float: left;
     width: 28%;
     margin-left: 4%;
+    text-align: center;
+}
+
+.content-table-column p {
+    line-height: 6; /* Aligns labels with text vertically */
+    height: 100%;
+    margin: 0;
+    font-size: 20px;
 }
 
 .content-table-column-last {
@@ -72,7 +79,7 @@ body, html {
 }
 
 .sixth-course:hover {
-    background: rgba(19, 19, 19, 0.66);
+    background: rgba(36, 36, 36, 0.66);
 }
 
 .footer {
