--- a/src/main/webapp/templates/editDisciplinesLayout.xhtml
+++ b/src/main/webapp/templates/editDisciplinesLayout.xhtml
@@ -14,8 +14,7 @@
         </ui:insert>
     </title>
 </h:head>
-<h:outputStylesheet library="css" name="main-page.css" target="body"/>
-<!--<h:outputScript library="javascript" name="util.js" target="body"/>-->
+<h:outputStylesheet library="css" name="edit-disciplines.css" target="body"/>
 <h:body>
     <div class="main-page">
 
