--- a/src/main/webapp/resources/css/main-page.css
+++ b/src/main/webapp/resources/css/main-page.css
@@ -112,3 +112,9 @@ html {
     text-align: center;
     height: 5%;
 }
+
+/* define colors of links on page */
+
+a:link {
+    color: #ec0b43!important;
+}
